--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -26,13 +26,29 @@
                 <pre><b>Linux/Mac:</b> ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content/Views/</pre>
             </div>
         </div>
-<pre>
+        <div class="row">
+            <div class="col">
+                <p>MVC views application</p>
+                <pre>
 &lt;Project name&gt;
     Views
         Shared
             <b>MvcGrid
                 _Grid.cshtml
                 _Pager.cshtml</b></pre>
+            </div>
+            <div class="col">
+                <p>Razor pages application</p>
+                <pre>
+&lt;Project name&gt;
+    Pages
+        <b>MvcGrid
+            _Grid.cshtml
+            _Pager.cshtml</b>
+                </pre>
+            </div>
+        </div>
+
             <p>
                 Add grid extensions to known namespaces in _ViewImports.cshtml
             </p>
