--- a/src/Mvc.Grid.Web/Views/Home/Index.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Index.cshtml
@@ -37,15 +37,16 @@
 </div>
 
 <div class="row">
-    <div class="widget code col">
-        <div class="widget-header">
-            <div class="fa fa-code"></div>
-            <span>Controller</span>
-            <div class="widget-buttons">
-                <span class="fa fa-minus content-toggle"></span>
+    <div class="col">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>MVC controller</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
             </div>
-        </div>
-        <div class="widget-content">
+            <div class="widget-content">
 <pre>
 <code>
 [<span class="cls">HttpGet</span>]
@@ -58,17 +59,17 @@
 }
 </code>
 </pre>
-        </div>
-    </div>
-    <div class="widget code col">
-        <div class="widget-header">
-            <div class="fa fa-code"></div>
-            <span>View</span>
-            <div class="widget-buttons">
-                <span class="fa fa-minus content-toggle"></span>
             </div>
         </div>
-        <div class="widget-content">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>MVC view</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
+            </div>
+            <div class="widget-content">
 <pre>
 <code>
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
@@ -92,6 +93,68 @@
 )
 </code>
 </pre>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>Razor page</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
+            </div>
+            <div class="widget-content">
+<pre>
+<code>
+<span class="kwd">public class</span> <span class="cls">IndexModel</span> : <span class="cls">PageModel</span>
+{
+    <span class="kwd">public</span> <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt; People { <span class="kwd">get</span>; <span class="kwd">set</span>; }
+
+    <span class="kwd">public void</span> OnGet()
+    {
+        People = <span class="cls">PeopleRepository</span>.GetPeople();
+    }
+}
+</code>
+</pre>
+            </div>
+        </div>
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>Razor page view</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
+            </div>
+            <div class="widget-content">
+<pre>
+<code>
+@@page
+@@model <span class="cls">IndexModel</span>
+
+@@(Html
+    .Grid(Model.People)
+    .Build(columns =>
+    {
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
+
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
+    })
+    .Empty(<span class="str">"No data found"</span>)
+    .Filterable()
+    .Sortable()
+    .Pageable()
+)
+</code>
+</pre>
+            </div>
         </div>
     </div>
 </div>
