Correct localization example
- Fixed #29, localization example using incorrect keys for not equals filter.

--- a/src/Mvc.Grid.Web/Views/Grid/Localization.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Localization.cshtml
@@ -90,7 +90,7 @@
         },
         number: {
             <span class="str">'equals'</span>: <span class="str">'Egale'</span>,
-            <span class="str">'note-quals'</span>: <span class="str">'Pas égal'</span>,
+            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>,
             <span class="str">'less-than'</span>: <span class="str">'Inférieur à'</span>,
             <span class="str">'greater-than'</span>: <span class="str">'Supérieur à'</span>,
             <span class="str">'less-than-or-equal'</span>: <span class="str">'Inférieur ou égale à'</span>,
@@ -98,7 +98,7 @@
         },
         date: {
             <span class="str">'equals'</span>: <span class="str">'Egale'</span>,
-            <span class="str">'note-quals'</span>: <span class="str">'Pas égal'</span>,
+            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>,
             <span class="str">'earlier-than'</span>: <span class="str">'Inférieur à'</span>,
             <span class="str">'later-than'</span>: <span class="str">'Supérieur à'</span>,
             <span class="str">'earlier-than-or-equal'</span>: <span class="str">'Inférieur ou égale à'</span>,
@@ -106,7 +106,7 @@
         },
         enum: {
             <span class="str">'equals'</span>: <span class="str">'Egale'</span>,
-            <span class="str">'note-quals'</span>: <span class="str">'Pas égal'</span>,
+            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>,
         },
         filter: {
             <span class="str">'apply'</span>: <span class="str">'&#10004;'</span>,
