Correct page sizes example
- Fixed, page sizes example using incorrect C# syntax.

--- a/src/Mvc.Grid.Web/Views/Pager/PageSizes.cshtml
+++ b/src/Mvc.Grid.Web/Views/Pager/PageSizes.cshtml
@@ -97,7 +97,7 @@
     })
     .Pageable(pager =>
     {
-        pager.PageSizes = <span class="kwd">new</span> <span class="cls">Dictionary</span><span class="cls">Int32</span>, <span class="cls">String</span>> { { 0, <span class="str">"All"</span> }, { 2, <span class="str">"2"</span> }, { 4, <span class="str">"4"</span> } };
+        pager.PageSizes = <span class="kwd">new</span> <span class="cls">Dictionary</span><<span class="cls">Int32</span>, <span class="cls">String</span>> { { 0, <span class="str">"All"</span> }, { 2, <span class="str">"2"</span> }, { 4, <span class="str">"4"</span> } };
         pager.ShowPageSizes = <span class="kwd">true</span>;
         pager.RowsPerPage = 2;
     })
