Razor comments on ajax grid examples
- Replaced html comments with razor ones, to avoid copy paste problems for the users.

--- a/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
@@ -78,7 +78,7 @@
 <code>
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
-<span class="com">&lt;!-- Should only include the grid --&gt;</span>
+<span class="com">@@* Should only include grid declaration *@@</span>
 
 @@(Html
     .Grid(Model)
@@ -178,7 +178,7 @@
 
 @@{ Layout = null; }
 
-<span class="com">&lt;!-- Should only include the grid --&gt;</span>
+<span class="com">@@* Should only include grid declaration *@@</span>
 
 @@(Html
     .Grid(Model.People)
