--- a/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RequestType.cshtml
@@ -102,7 +102,7 @@ $(<span class="str">'.content-refresh'</span>).on(<span class="str">'click'</spa
 <code>
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
-<span class="com">&lt;!-- Should only include the grid --&gt;</span>
+<span class="com">@@* Should only include grid declaration *@@</span>
 
 @@(Html
     .Grid(Model)
