--- a/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
@@ -83,7 +83,7 @@
 <code>
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
-<span class="com">&lt;!-- Should only include the grid --&gt;</span>
+<span class="com">@@* Should only include grid declaration *@@</span>
 
 @@(Html
     .Grid(Model)
