Correct localization example
- Fixed, localization example not using up to date structures, resulting in some of the grid filter not opening at all.

--- a/src/Mvc.Grid.Web/Views/Grid/Localization.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Localization.cshtml
@@ -34,15 +34,39 @@
 </div>
 
 <div class="row">
-    <div class="widget code col">
-        <div class="widget-header">
-            <div class="fa fa-code"></div>
-            <span>View</span>
-            <div class="widget-buttons">
-                <span class="fa fa-minus content-toggle"></span>
+    <div class="col">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>Startup</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
+            </div>
+            <div class="widget-content">
+<pre>
+<code>
+<span class="kwd">public void</span> ConfigureServices(<span class="cls">IServiceCollection</span> services)
+{
+    services.AddMvcGrid(filters =>
+    {
+        filters.BooleanFalseOptionText = () => Localize(<span class="str">"false"</span>);
+        filters.BooleanTrueOptionText = () => Localize(<span class="str">"true"</span>);
+    });
+}
+</code>
+</pre>
             </div>
         </div>
-        <div class="widget-content">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>View</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
+                </div>
+            </div>
+            <div class="widget-content">
 <pre>
 <code>
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
@@ -66,6 +90,7 @@
 )
 </code>
 </pre>
+            </div>
         </div>
     </div>
     <div class="widget code col">
@@ -106,7 +131,11 @@
         },
         enum: {
             <span class="str">'equals'</span>: <span class="str">'Egale'</span>,
-            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>,
+            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>
+        },
+        boolean: {
+            <span class="str">'equals'</span>: <span class="str">'Egale'</span>,
+            <span class="str">'not-equals'</span>: <span class="str">'Pas égal'</span>
         },
         filter: {
             <span class="str">'apply'</span>: <span class="str">'&#10004;'</span>,
